[refactor] Update remaining storage and infrastructure code for Java 21
Group the remaining mixed Java 21 rewrites across configuration, storage, scheduling, and runtime bootstrap code into one infrastructure-focused commit.